# blog

./: .containerignore  .env  .gitignore  Cargo.toml  Containerfile  Dockerfile  README.md  build.rs  fly.toml  note.md
.github/workflows/: ci-cd.yaml  ci-cd.yml
.sqlx/: query-09eeff5788f09a0f7b3e67b4bfee6ff5ef159a08124b87db491f345850ef404f.json
contents/poems/: 0001-20090202-bien-va-thuyen.md  0002-20090204-dung.md  0003-20150527-anh-hung-truyen-001.md  0004-20150610-anh-hung-truyen-002.md  0005-20180403-nhau.md  0006-20190621-do-ta-khong-do-nang.md  0007-20201022-trung-thu-thi-ca.md
contents/posts/: 0001-20150228-name-change-for-a-game-change-ace-acquired-chubb.md  0001-20250905-deploy-my-own-tech-blog-finally.md  0001-20250915-deploy-my-own-tech-blog-finally.md  0001_20250415_deploy_my_own_tech_blog_finally.md  0002-20150601-vn-monetary-policy-change-reflection.md  0003-20160323-shutting-down-refugee-immigrations-means-more-suicidal-bombing.md  0004-20250905-deploy-my-own-blog-finally.md
contents/writing/: 0005-20250907-my-rust-crate-rslife-just-hits-3k-downloads.md
end2end/: README.md  package-lock.json  package.json  playwright.config.ts
end2end/tests/: accessibility.spec.ts  blog-posts.spec.ts  example.spec.ts  homepage.spec.ts  navigation.spec.ts  performance.spec.ts  responsive.spec.ts  subscription.spec.ts
migrations/: 20250903230910_create_newsletter_subscribers_table.sql  20250906100130_create_wnblog_schema_and_tables.sql
public/: nav-styles.css
public/style/: footer-styles.css  pico.min.css  subscribe_form.css
src/: app.rs  client.rs  lib.rs  main.rs  server.rs
src/app/: about.rs  components.rs  footer.rs  helpers.rs  home.rs  homepage.rs  icons.rs  nav.rs  pages.rs  postpage.rs  subscribe_form.rs  theme_toggle.rs
src/app/components/: content_list.rs  fast_a.rs  icons.rs  nav.rs  theme_toggle.rs
src/app/pages/: homepage.rs  poempage.rs  postpage.rs
src/server/: config.rs  db.rs  error.rs  middleware.rs  routes.rs  services.rs  state.rs
src/server/db/: db.rs  error.rs  migrations.rs  pool.rs  state.rs
src/server/handlers/: status.rs  subscriber.rs
src/server/middleware/: cache.rs  csrf.rs  forwarded_for_key_extractor.rs  global_layer.rs  governor.rs  request_logger.rs  security_headers.rs  throttle.rs
src/server/middleware/global_layer/: cors.rs  security_headers.rs
src/server/models/: status.rs  subscriber.rs
src/server/repositories/: status.rs  subscriber.rs
src/server/routes/: auth.rs  posts.rs  routes.rs  status.rs  subscriber.rs
src/server/services/: status.rs  subscriber.rs
src/shared/: dto.rs
